...
                    android:textSize="20sp"
                    tools:text="MonsterHunter"
                    tools:visibility="visible" />
            </androidx.appcompat.widget.Toolbar>

            <fragment
                android:id="@+id/myNavHostFragment"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:defaultNavHost="true"
                app:layout_constraintBottom_toTopOf="@+id/bottomNav"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:navGraph="@navigation/navigation" />


            <com.google.android.material.bottomnavigation.BottomNavigationView
...
