...

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/home_loading_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            app:layout_constraintBottom_toBottomOf="@+id/home_data_recy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/active_archer"
...
