...
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="70dp"
            />


        <TextView
            android:id="@+id/google_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/login_activity_signin_button"
            android:textAllCaps="false"
...
