<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_chatroom"
        android:icon="@drawable/ic_nav_chatroom_selector"
        android:title="chatRoom" />

    <item
        android:id="@+id/navigation_friend"
        android:icon="@drawable/ic_nav_friend_selector"
        android:title="friend" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_nav_home_selector"
        android:title="home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_nav_history_selector"
        android:title="history" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_nav_profile_selector"
        android:title="profile" />

</menu>
