...
    <string name="testType">活動</string>
    <string name="testArms">武器</string>
    <string name="home_sent">送出</string>
    <string name="home_attendee">參戰</string>

    <!--SignIn -->
    <string name="google_signIn">Google SignIn</string>
    <string name="google_sign_in_textPerson">選擇繼續即表示您同意接受我們的</string>
    <string name="google_sign_in_textAnd">和</string>
    <string name="google_sign_in_textTerms">服務條款</string>
    <string name="google_sign_in_textTerms2">隱私權條款</string>

    <!-- SignOut -->
...
